# online_training

./: .env.example  .gitignore  Dockerfile  README.md  coverage_report.txt  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
lms/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_course_price_course_stripe_price_id_and_more.py  0005_alter_subscription_course_alter_subscription_user.py  0006_alter_subscription_options.py  0007_course_updated_at.py
lms/services/: stripe_service.py
users/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: load_payments.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers_payment.py  0003_payment_stripe_payment_id_payment_stripe_status.py
users/models/: payment_model.py  user_model.py
